syntax = "proto3";
package com.acme.protocolchaos;

message Register {
  LightUser user = 1;

  oneof profile_image_source {
    string profile_image_url = 10;
    ProfileImage profile_image = 11;
  };
}

message LightUser {
  string id = 1;
  string dob = 2;
  repeated string tags = 4;
}

message ProfileImage {
  string content_type = 1;
  bytes  content = 2;
}
